# moderncpp_cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bookmark  vcpkg.json
mem_and_pointer/: CMakeLists.txt
mem_and_pointer/src/: MemAndPointer.cpp
modern_cpp/: CMakeLists.txt
modern_cpp/include/: GArray.h  GArray.tpp  MyTest.h  TestLinker.h  TwoDimArr.h  static_array.h
modern_cpp/src/: GArray.cpp  TestLinker.cpp  TestLinkerWrapper.cpp  main.cpp  static_array.cpp  std_array.cpp  two_dim_arr.cpp  utils.cpp
tests/: CMakeLists.txt  GArrayTests.cpp  MemoryTests.cpp  ModernCppTests.cpp
